# MyVmOS

./: .gitignore  CFS_EDF 调度系统实现完成.md  CMakeLists.txt  Capstone反汇编系统改进总结.md  Capstone反汇编系统设计文档.md  README.md  TimeoutManager 统一超时管理实现总结.md  X86VM 指令解码器 Bug 修复总结.md  X86VM执行器方案对比.md  X86VM重构实施清单.md  X86VM重构开发文档.md  调度系统架构升级总结.md  调度系统编程手册.md  调度系统重构总结.md
Compiler/: CMakeLists.txt  IR 到汇编实现总结.md  IR 指令编码完整实现总结.md  IRToAssembly 使用指南.md  IRToAssembly 快速参考.md  QUICKSTART.md  README.md  RIP 相对寻址实现总结.md  Syscall 关键字实现文档.md  Syscall 指令二进制编码实现总结.md  code.txt  gmon.out  main.cpp  register_allocation_summary.md  temp.txt  test.txt  test_complex.txt  test_for.txt  test_syscall_source.myos  手写汇编器实现总结.md  编译器后端集成总结.md  编译器集成报告.md
Compiler/include/: File.h  Token.h
Compiler/include/AST/: AST.h  ASTPrinter.h  ASTnode.h
Compiler/include/IR/: Assembler.h  IR.h  IRToAssembly.h  IRbase.h  IRprinter.h
Compiler/src/: File.cpp  Token.cpp
Compiler/src/AST/: AST.cpp  ASTPrinter.cpp  ASTnode.cpp
Compiler/src/IR/: Assembler.cpp  IR.cpp  IRToAssembly.cpp  IRbase.cpp  IRprinter.cpp
Compiler/tests/: test_assembler.cpp  test_file_integration.cpp  test_ir_to_assembly.cpp  test_syscall.txt  test_syscall_assembler.cpp  test_syscall_bin.txt  test_syscall_binary.cpp  test_syscall_full.cpp
Lab/: README.md
Lab/Phase2.3_CFG/: CFG_Integration_Report.md  CMakeLists.txt  CallGraph.h  EnhancedCapstoneDisassembler.h  EnhancedCapstoneDisassemblerV2.h  EnhancedControlFlowGraph.h  EnhancedJumpTargetExtractor.h  FILE_MAPPING.md  Implementation_Report_Call_Ret_Enhancement.md  Implementation_Report_Improved_Jump_Target.md  JUMP_TARGET_FILE_MAPPING.md  Programming_Guide_Enhanced_CALL_RET_Analysis.md  Programming_Guide_Improved_Jump_Target_Extraction.md  README.md  Step1_Complete.md  Step3_Complete.md  test_call_ret_enhancement.cpp  test_enhanced_jump_target.cpp  x86vm_vs_lab_jump_comparison.md
Lab/Phase2.3_CFG/include/: BasicBlock.h  CapstoneDisassembler.h  ControlFlowGraph.h  MockVM.h
Lab/Phase2.3_CFG/src/: CapstoneDisassembler.cpp  ControlFlowGraph.cpp
Lab/Phase2.3_CFG/tests/: test_cfg.cpp
docs/: CFG_VM_Integration_Summary.md  CFG_VM_Quick_Reference.md  CFS_EDF 调度系统实现完成.md  CMake 构建系统实现总结.md  Capstone反汇编系统改进总结.md  Capstone反汇编系统设计文档.md  ControlFlowGraph_X86CPU_Integration.md  Loader 使用指南.md  Loader 模块实现总结.md  Logger使用指南.md  ModRM_指令修复总结.md  Phase2_VM集成与反汇编优化设计.md  RuntimeInterface 使用指南.md  RuntimeInterface 增强实现文档.md  Syscall 关键字实现文档.md  Syscall 增强功能与终端管理器实现总结.md  Task_1.4_反汇编集成实现总结.md  ThreadPool_ObjectPool_实现总结.md  ThreadPool_ObjectPool_快速参考.md  TimeoutManager 统一超时管理实现总结.md  VM 管理系统 ThreadPool 优化总结.md  VM_Manager 兼容性最终结论.md  VM_Manager 接口兼容性分析.md  VM管理优化快速参考.md  VmManager 创建销毁接口实现文档.md  X86VM 指令解码器 Bug 修复总结.md  X86VM_寄存器编码Bug修复.md  X86VM_循环Bug修复总结.md  X86VM执行器开发避坑指南.md  X86VM执行器方案对比.md  X86VM重构实施清单.md  X86VM重构开发文档.md  X86_decode_Fix_Summary.md  外设真实化实现总结.md  异步中断处理 & 中断分级设计实现总结.md  异步中断处理快速参考.md  彩色日志系统实现文档.md  调度器自旋锁修复总结.md  调度系统架构升级总结.md  调度系统重构总结.md
include/log/: Logging.h
include/periph/: Disk.h  NIC.h  PeriphGIL.h  PeriphManager.h  Terminal.h  TerminalManager.h  cross_platform.h
include/router/: LockFreeMessageQueue.h  MessageProtocol.h  RouterCore.h
include/utils/: ObjectPool.h  RuntimeInterface.h  ThreadPool.h  TimeoutManager.h
include/utils/Loader/: Loader.h
include/vm/: SchedulerManager.h  VmManager.h  VmManager.h.old  X86CPU.h  baseVM.h  mVM.h
include/vm/Scheduler/: CFS_Scheduler.h  EDF_Scheduler.h  Hybrid_Scheduler.h  QuotaScheduler.h  SchedulerBase.h
include/vm/disassembly/: CapstoneDisassembler.h  IR.h  InstructionWithExecutor.h
include/vm/disassembly/x86/: X86ExecutorRegistry.h  X86Executors.h  X86ExecutorsFwd.h  X86Instruction.h
src/log/: Logging.cpp
src/periph/: Disk.cpp  NIC.cpp  PeriphManager.cpp  Terminal.cpp  TerminalManager.cpp
src/router/: RouterCore.cpp
src/utils/: RuntimeInterface.cpp  ThreadPool.cpp  TimeoutManager.cpp
src/utils/Loader/: Loader.cpp
src/utils/mempool/: CmakeLists.txt  FIX_RBTree_Insert.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  main.cpp  test.cpp
src/utils/mempool/include/: List.h  MemoryManager.h  RBtree.h  VMA.h
src/utils/mempool/src/: RBtree.cpp
src/vm/: SchedulerManager.cpp  VmManager.cpp  X86CPU.cpp  X86_decode.cpp  X86_instructions.cpp  X86_other_instructions.cpp  mVM.cpp
src/vm/Scheduler/: CFS_Scheduler.cpp  EDF_Scheduler.cpp  Hybrid_Scheduler.cpp  QuotaScheduler.cpp  SchedulerBase.cpp
src/vm/capstone-Release/include/capstone/: aarch64.h  capstone.h  m680x.h  riscv.h  sparc.h  xcore.h
src/vm/capstone-Release/lib/cmake/capstone/: capstone-config-version.cmake  capstone-targets-release.cmake  capstone-targets.cmake
src/vm/capstone-Release/lib/pkgconfig/: capstone.pc
src/vm/disassembly/: BasicBlock.h  CapstoneDisassembler.cpp  CapstoneDisassembler.h  ControlFlowGraph.cpp  ControlFlowGraph.h  DisassemblyTracker.h  EnhancedJumpTargetExtractor.h  README.md
src/vm/disassembly/x86/: X86ExecutorRegistry.cpp  X86Instruction.cpp
tests/: CFG_INTEGRATION_TEST_REPORT.md  test_async_interrupt.cpp  test_capstone_disasm.cpp  test_cfg_analysis.cpp  test_cfg_integration.cpp  test_cmp_flags.cpp  test_cmp_instruction.cpp  test_cmp_simple.cpp  test_compiler_integration.cpp  test_cv_fix.cpp  test_debug_logging.cpp  test_disassembly_integration.cpp  test_enhanced_jump_target_integration.cpp  test_instruction_length.cpp  test_ir_executor.cpp  test_loader.cpp  test_logging.cpp  test_modrm_fixes.cpp  test_mov_ebx.cpp  test_new_disassembly.cpp  test_opcode_0x00.cpp  test_periph_simple.cpp  test_pool_integration.cpp  test_router.cpp  test_runtime_full.cpp  test_runtime_interface.cpp  test_syscall_enhancements.cpp  test_thread_memory_pool.cpp  test_timeout_manager.cpp  test_vm_all_schedulers_fixed.cpp  test_vm_api_compatibility.cpp  test_vm_arithmetic.cpp  test_vm_create_destroy.cpp  test_vm_manager_arch.cpp  test_vm_optimized.cpp  test_vm_scheduler.cpp  test_vm_schedulers_basic.cpp  test_vm_schedulers_runtime.cpp  test_vm_simple.cpp  test_vm_syscall.cpp  (+7 more)
